BtaTask/src/main/java/org/example/errors/XMLFileReadingException.java
package org.example.errors;

public class XMLFileReadingException extends Exception{
    public XMLFileReadingException(String message){
        super(message);
    }

    public XMLFileReadingException(String message,Throwable cause){
        super(message);
    }
}
